# jamictl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org
src/: dringctrl.cpp  dringctrl.h  jamictl.cpp  jamictl.h  main.cpp
